--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,25 +7,33 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/TextViewNotes"
+        android:id="@+id/textViewNotes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#4b4b4b"
+        android:padding="6dp"
         android:text="@string/text_view_notes"
         android:textColor="@color/white"
         android:textSize="24sp"
-        android:padding="6dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/ListViewNotes"
+        android:id="@+id/listViewNotes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#3b3b3b"
 
-        app:layout_constraintTop_toBottomOf="@+id/TextViewNotes"
+        app:layout_constraintTop_toBottomOf="@+id/textViewNotes"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonAddNote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
