--- a/app/src/main/res/layout/activity_view_note.xml
+++ b/app/src/main/res/layout/activity_view_note.xml
@@ -7,23 +7,27 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="#4e4e4e"
-    tools:context="AddNoteActivity">
+    tools:context="ViewNoteActivity">
 
-    <EditText
-        android:id="@+id/editTextNoteTitle"
+    <Spinner
+        android:id="@+id/spinnerNotes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="8dp"/>
+
+    <TextView
+        android:id="@+id/textViewNoteTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/note_title_hint"
-        android:textColor="@color/white"
-        android:inputType="text"/>
+        android:textColor="@color/white"/>
 
-    <EditText
-        android:id="@+id/editTextNoteContent"
+    <TextView
+        android:id="@+id/textViewNoteContent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginTop="8dp"
-        android:inputType="textMultiLine"
         android:isScrollContainer="true"
         android:textColor="@color/white"
         android:gravity="start"/>
@@ -35,12 +39,12 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/buttonAddNote"
+            android:id="@+id/buttonDeleteNote"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/add_note"
-            app:icon="@android:drawable/ic_menu_save"
+            android:text="@string/delete_note"
+            app:icon="@android:drawable/ic_menu_delete"
             app:iconSize="22dp" />
     </LinearLayout>
 </LinearLayout>
